[package]
name = "embedded-error"
version = "0.3.0"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
edition = "2018"
categories = [
    "embedded",
    "no-std",
]
description = "Universal error kinds for embedded systems"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/embedded-error"
repository = "https://github.com/therealprof/embedded-error"
readme = "README.md"
